# LangReact

./: .gitignore  .gitmodules  LICENSE  dockerfile  pyproject.toml  readme.md
datanode/: __init__.py  chunk.py  node.py
demo/: create_a_chatbot.py  simple_milvus_server.py
demo/conf/: default.py  qwen_chat_configure.py
docker/: dockerfile
langreact/core/: __init__.py  application.py  constants.py  context.py  flow.py  params.py  steps.py  tools.py
langreact/core/builder/: output_builder.py
langreact/core/common/: agent.py  chunk.py  event.py  event_manager.py  feedback_chunk.py
langreact/core/configure/: configure.py  default.py  logging.conf
langreact/core/memory/: memory.py  memory_chunk.py  memory_index.py
langreact/core/modifier/: chunk_modifier.py  context_modifier.py
langreact/core/observer/: feedback.py  observer.py  observer_manager.py
langreact/core/planning/: agent.py
langreact/core/plugin/: base.py  plugins.py  qwen_plugin.py
test/: conftest.py  test_chunk.py  test_dyna_import.py  test_event.py  test_event_mapping.py  test_flow.py  test_langchain.py  test_memory.py  test_memory_aid.py  test_observer.py  test_output_builder.py
tools/: wrapper_utils.py
